--- a/web/app/views/components/collection/movies/_collection.html.erb
+++ b/web/app/views/components/collection/movies/_collection.html.erb
@@ -15,7 +15,7 @@
 
 %>
 
-<div class="me-collection">
+<div class="me-collection" data-model="movie">
   <div class="me-collection__head">
     <div class="me-collection__title-tertiary">
       <%= data[:title][:tertiary] %>
