--- a/web/app/views/movies/show.html.erb
+++ b/web/app/views/movies/show.html.erb
@@ -8,7 +8,7 @@
     <div class="me-section__inner">
       <div class="me-movie me-movie--single">
         <div class="me-movie__cover">
-          <%= image_tag(@movie.image[:medium].url, style: "background: #{JSON.parse(@movie.image_data).dig('medium', 'metadata', 'dominant_color')}") if @movie.image[:medium] %>
+          <%= image_tag(@movie.image[:medium].url, style: "background: #{JSON.parse(@movie.image_data).dig('medium', 'metadata', 'dominant_color')}") if @movie.image %>
         </div>
         <div class="me-movie__inner">
           <h3 class="me-movie__title">
@@ -81,9 +81,8 @@
     </div>
   </div>
 
-  <%# unless current_user %>
-  <%#= link_to root_path, style: "display: flex" do %>
-  <!--      <img class="me-banner" data-gtm="banner-request-invite-footer" loading="lazy" src="<%#= image_url 'banners/get-invite-banner' %>" alt="Pegue um convite">-->
-  <%# end %>
-  <%# end %>
+  <% if current_user&.admin? %>
+    <%= link_to "Editar", edit_movie_path(@movie) %>
+  <% end %>
+
 </section>
