--- a/web/app/views/components/follow/_follow.html.erb
+++ b/web/app/views/components/follow/_follow.html.erb
@@ -14,10 +14,10 @@
 %>
 
 <div class="me-follow-chip-set mdc-chip-set"
-     data-controller="follow-chipset"
-     data-target="follow-chipset.chipset"
-     data-follow-chipset-similar-to="<%= data[:event_id] %>"
-     data-follow-chipset-expand-to-similar="<%= data[:expand_to_similar] %>"
+     data-controller="follow-chip-set"
+     data-target="follow-chip-set.chip-set"
+     data-follow-chip-set-similar-to="<%= data[:event_id] %>"
+     data-follow-chip-set-expand-to-similar="<%= data[:expand_to_similar] %>"
      id="<%= data[:identifier] ? data[:identifier] : "follow-chip-set__#{data[:type]}-#{data[:event_id]}" %>">
 
   <%= render partial:    'components/follow/follow-chip-set',
