Add scroll attrs to ios devices in scroll x

--- a/web/app/assets/stylesheets/components/me-collection.scss
+++ b/web/app/assets/stylesheets/components/me-collection.scss
@@ -17,6 +17,7 @@
       @include mobile-only {
         grid-gap: var(--mdc-layout-grid-gutter-phone, 16px);
         overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
         grid-template-columns: repeat(100, minmax(56vw, 1fr));
         padding: 6px 70px 0 $section-padding-phone;
       }
@@ -28,6 +29,7 @@
       @include mobile-only {
         grid-gap: var(--mdc-layout-grid-gutter-phone, 16px);
         overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
         grid-template-columns: repeat(1, minmax(100%, 1fr));
         padding: 0 $section-padding-phone;
       }
