--- a/web/app/assets/stylesheets/components/me-bot.scss
+++ b/web/app/assets/stylesheets/components/me-bot.scss
@@ -35,7 +35,7 @@
   //height: 0;
   //border-style: solid;
   //border-width: 20px 20px 10px 0;
-  //border-color: transparent #fff transparent transparent;
+  //border-color: rgba(255, 255, 255, 0) #fff rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
   //transform: rotate(-30deg)
 }
 
@@ -72,7 +72,7 @@
   content: "";
   left: 100%;
   top: 0;
-  background: transparent
+  background: rgba(255, 255, 255, 0)
 }
 
 .me-bot__message.fill-img {
