--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -44,7 +44,7 @@
 
     &::before {
       @include mobile-only {
-        background: linear-gradient(270deg, white 10%, transparent);
+        background: linear-gradient(270deg, white 10%, rgba(255, 255, 255, 0));
         position: absolute;
         z-index: 5;
         width: 40px;
