--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -248,7 +248,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      background: linear-gradient(0deg, #FFFFFF 15%, transparent 100%);
+      background: linear-gradient(0deg, #FFFFFF 15%, rgba(255, 255, 255, 0) 100%);
       z-index: 2;
     }
 
