--- a/web/app/assets/stylesheets/components/me-footer.scss
+++ b/web/app/assets/stylesheets/components/me-footer.scss
@@ -103,7 +103,7 @@
       max-width: 85%;
       // margin: auto;
       transition: transform 0.35s ease;
-      -webkit-tap-highlight-color: transparent;
+      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
       &:hover {
         transform: scale(0.95);
