--- a/web/app/assets/stylesheets/components/me-hero.scss
+++ b/web/app/assets/stylesheets/components/me-hero.scss
@@ -50,7 +50,7 @@
     bottom: 0;
     left: 0;
     padding: 16px 16px 6px 16px;
-    background: linear-gradient(to top, #ffffffe6 , transparent );
+    background: linear-gradient(to top, #ffffffe6 , rgba(255, 255, 255, 0) );
     flex-wrap: wrap;
     padding-top: 150px;
     opacity: 0;
