--- a/web/app/assets/stylesheets/components/me-search-field.scss
+++ b/web/app/assets/stylesheets/components/me-search-field.scss
@@ -46,10 +46,10 @@ $field-height: 50px;
     height: $field-height;
     font-weight: 400;
     outline: none;
-    background: transparent;
-    border: 1px solid transparent;
+    background: rgba(255, 255, 255, 0);
+    border: 1px solid rgba(255, 255, 255, 0);
     transition: border 0.1s ease-out;
-    border-bottom-color: transparent !important;
+    border-bottom-color: rgba(255, 255, 255, 0) !important;
     align-self: baseline;
     @include mobile-only {
       padding: 0 6px;
