--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -168,7 +168,7 @@
       z-index: 2;
       top: 0;
       left: 0;
-      background: linear-gradient(to top, #000000d9 30%, transparent);
+      background: linear-gradient(to top, #000000d9 30%, rgba(255, 255, 255, 0));
     }
   }
 
