--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -322,7 +322,7 @@ $background-color: #f3f5f7;
     max-width: 85%;
     // margin: auto;
     transition: transform 0.35s ease;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
     &:hover {
       transform: scale(0.95);
@@ -404,7 +404,7 @@ $background-color: #f3f5f7;
   margin: 0 auto 0 auto;
   cursor: pointer;
   transition: box-shadow 0.4s ease, transform 0.4s ease, opacity 0.4s ease;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-user-select: none;
   @include mobile-only {
     width: calc(100vw - 48px);
