--- a/web/app/assets/stylesheets/welcome/fcp.scss
+++ b/web/app/assets/stylesheets/welcome/fcp.scss
@@ -310,7 +310,7 @@ section {
     cursor: pointer;
     transition: box-shadow 0.4s ease, transform 0.4s ease, opacity 0.4s ease;
     will-change: transform;
-    -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     -webkit-user-select: none;
     @include mobile-only {
       width: 196px;
@@ -527,7 +527,7 @@ section {
 .invite-float {
   position: fixed;
   bottom: 0;
-  background: linear-gradient(0deg, $surface-color 60%, transparent);
+  background: linear-gradient(0deg, $surface-color 60%, rgba(255, 255, 255, 0));
   width: 100vw;
   z-index: 3;
   visibility: hidden;
@@ -561,7 +561,7 @@ section {
   border-radius: 35px;
   z-index: 5;
   will-change: opacity, transform;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-user-select: none;
   @include desktop-only {
     display: none;
