Adjust in tab-bar component

--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -1,43 +1,43 @@
 <%
 
   props = {
-      active:       nil,
-      movies_count: Movie.all.size,
-      visible: mobile_device? &&
-               (controller_name == 'feeds') &&
-               ['index', 'category', 'city'].include?(params[:action])
+      active:         nil,
+      movies_count:   Movie.all.size,
+      mobile_visible: mobile_device? &&
+                     (controller_name == 'feeds') &&
+                     ['index', 'category', 'city'].include?(params[:action])
   }.deep_merge!(props || {})
 
 %>
 
-<% if props[:visible] %>
-  <div id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist" data-controller="tab-bar" data-target="tab-bar.tabBar" data-turbolinks-permanent>
+<% if props[:mobile_visible] %>
+  <div data-turbolinks-permanent data-controller="tab-bar" data-target="tab-bar.tabBar" data-tab-bar-selected-tab="<%= "#{controller_name}##{action_name}" %>" data-tab-bar-turbolinks-persist-scroll="0" id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist">
     <div class="mdc-tab-scroller">
-      <div class="mdc-tab-scroller__scroll-area is-horizontal-scrollable">
+      <div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area is-horizontal-scrollable">
         <div class="mdc-tab-scroller__scroll-content">
-          <button data-action="click->tab-bar#open" data-tab-path="/feed" class="mdc-tab <%= 'mdc-tab--active' if controller_name == 'feeds' && action_name == 'index' %>" role="tab" aria-selected="<%= controller_name == 'feeds' && action_name == 'index'  ? 'true' : 'false' %>" data-tab-identifier="0">
+          <button data-action="click->tab-bar#open" data-section="feeds#index" data-tab-path="/feed" class="mdc-tab">
             <span class="mdc-tab__content">
               <span class="mdc-tab__text-label">Para você</span>
             </span>
-            <span class="me-tab-indicator mdc-tab-indicator <%= 'mdc-tab-indicator--active' if controller_name == 'feeds' && action_name == 'index' %>">
+            <span class="me-tab-indicator mdc-tab-indicator">
               <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
             </span>
             <span class="mdc-tab__ripple"></span>
           </button>
-          <button data-action="click->tab-bar#open" data-tab-path="/porto-alegre/eventos/categoria" class="mdc-tab <%= 'mdc-tab--active' if action_name == 'category' %>" role="tab" aria-selected="<%= action_name == 'category'  ? 'true' : 'false' %>" data-tab-identifier="1">
+          <button data-action="click->tab-bar#open" data-section="feeds#category" data-tab-path="/porto-alegre/eventos/categoria" class="mdc-tab">
             <span class="mdc-tab__content">
               <span class="mdc-tab__text-label">Categorias</span>
             </span>
-            <span class="me-tab-indicator mdc-tab-indicator <%= 'mdc-tab-indicator--active' if action_name == 'category' %>">
+            <span class="me-tab-indicator mdc-tab-indicator">
               <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
             </span>
             <span class="mdc-tab__ripple"></span>
           </button>
-          <button data-action="click->tab-bar#open" data-tab-path="/porto-alegre/eventos" class="mdc-tab <%= 'mdc-tab--active' if action_name == 'city' %>" role="tab" aria-selected="<%= action_name == 'city' ? 'true' : 'false' %>" data-tab-identifier="2">
+          <button data-action="click->tab-bar#open" data-section="feeds#city" data-tab-path="/porto-alegre/eventos" class="mdc-tab">
             <span class="mdc-tab__content">
               <span class="mdc-tab__text-label">Explorar tudo</span>
             </span>
-            <span class="me-tab-indicator mdc-tab-indicator <%= 'mdc-tab-indicator--active' if action_name == 'city' %>">
+            <span class="me-tab-indicator mdc-tab-indicator">
               <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
             </span>
             <span class="mdc-tab__ripple"></span>
@@ -50,32 +50,30 @@
 
 <% if !mobile_device? &&
       (controller_name == 'feeds' || controller_name == 'movies') %>
-  <div class="me-tab-bar mdc-tab-bar" data-controller="tab-bar" data-target="tab-bar.tabBar" role="tablist">
-    <div class="mdc-tab-scroller">
-      <div class="mdc-tab-scroller__scroll-area">
-        <div class="mdc-tab-scroller__scroll-content">
-          <button data-action="click->tab-bar#open" data-tab-path="/feed" class="mdc-tab <%= 'mdc-tab--active' if props[:active] == 'feeds' %>" role="tab" aria-selected="<%= props[:active] == 'feeds' ? 'true' : 'false' %>">
-            <span class="mdc-tab__content">
-              <span class="mdc-tab__text-label">Eventos</span>
-            </span>
-            <span class="me-tab-indicator mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == 'feeds' %>">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
-          </button>
-          <% if props[:movies_count] > 0 %>
-            <button data-action="click->tab-bar#open" data-tab-path="<%= movies_path %>" class="mdc-tab <%= 'mdc-tab--active' if props[:active] == 'movies' %>" role="tab" aria-selected="<%= props[:active] == 'movies' ? 'true' : 'false' %>">
-              <span class="mdc-tab__content">
-                <span class="mdc-tab__text-label">Filmes</span>
-              </span>
-              <span class="mdc-tab-indicator <%= 'mdc-tab-indicator--active' if props[:active] == 'movies' %>">
-                <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-              </span>
-              <span class="mdc-tab__ripple"></span>
-            </button>
-          <% end %>
+      <div data-turbolinks-permanent data-controller="tab-bar" data-target="tab-bar.tabBar" data-tab-bar-selected-tab="<%= "#{controller_name}##{action_name}" %>" data-tab-bar-turbolinks-persist-scroll="0" id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist">
+        <div class="mdc-tab-scroller">
+          <div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area is-horizontal-scrollable">
+            <div class="mdc-tab-scroller__scroll-content">
+              <button data-action="click->tab-bar#open" data-section="feeds#index" data-tab-path="<%= url_for feed_path %>" class="mdc-tab">
+                <span class="mdc-tab__content">
+                  <span class="mdc-tab__text-label">Eventos</span>
+                </span>
+                <span class="me-tab-indicator mdc-tab-indicator">
+                  <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                </span>
+                <span class="mdc-tab__ripple"></span>
+              </button>
+              <button data-action="click->tab-bar#open" data-section="movies#index" data-tab-path="<%= url_for movies_path %>" class="mdc-tab">
+                <span class="mdc-tab__content">
+                  <span class="mdc-tab__text-label">Filmes</span>
+                </span>
+                <span class="me-tab-indicator mdc-tab-indicator">
+                  <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
+                </span>
+                <span class="mdc-tab__ripple"></span>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 <% end %>
