--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -14,6 +14,7 @@
   box-shadow: 0px 0px 1px 0px #0a0a0a99;
   will-change: box-shadow;
   transition: 250ms box-shadow ease;
+  // @include mdc-tab-states-color(#ffffff);
   @include desktop-only {
     z-index: 3;
     padding: 0 0 0 73px;
@@ -31,6 +32,7 @@
 
   & .mdc-tab {
     width: auto;
+    @include mdc-tab-states-color(#ffffff);
     // max-width: 100px;
     @include desktop-only {
 
@@ -56,6 +58,7 @@
   }
 
   & .mdc-tab-indicator__content {
+    max-width: 30px;
     border-top-width: 3px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
