--- a/web/app/views/components/collection/_movie.html.erb
+++ b/web/app/views/components/collection/_movie.html.erb
@@ -7,7 +7,7 @@
         <%= link_to send("#{movie.type.underscore}_path", movie) do %>
           <div data-target="movie.coverRipple" data-action="click->movie#handleEventClick" class="me-movie__ripple mdc-ripple-surface"></div>
         <% end %>
-        <%= image_tag(movie.image[:medium].url(public: true)) if movie.image.try {|image| image[:medium]} %>
+        <%= image_tag(movie.image[:medium].url(public: true), loading: :lazy) if movie.image.try {|image| image[:medium]} %>
         <% if movie.details_trailler.present? %>
           <div class="me-movie__trailler me-chip mdc-chip" onclick="location.assign('<%= movie.details_trailler %>')">
             <i class="material-icons mdc-chip__icon mdc-chip__icon--leading"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 13.5v-7c0-.41.47-.65.8-.4l4.67 3.5c.27.2.27.6 0 .8l-4.67 3.5c-.33.25-.8.01-.8-.4z"/></svg></i>
