--- a/web/app/views/components/_tab-bar.html.erb
+++ b/web/app/views/components/_tab-bar.html.erb
@@ -13,7 +13,7 @@
 <% if props[:mobile_visible] %>
   <div data-turbolinks-permanent data-controller="tab-bar" data-target="tab-bar.tabBar" data-tab-bar-selected-tab="<%= "#{controller_name}##{action_name}" %>" data-tab-bar-turbolinks-persist-scroll="0" id="tab-bar" class="me-tab-bar mdc-tab-bar" role="tablist">
     <div class="mdc-tab-scroller">
-      <div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area is-horizontal-scrollable">
+      <div data-target="tab-bar.scroller" class="mdc-tab-scroller__scroll-area">
         <div class="mdc-tab-scroller__scroll-content">
           <button data-action="click->tab-bar#open" data-section="feeds#index" data-tab-path="/feed" class="mdc-tab">
             <span class="mdc-tab__content">
