--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -23,19 +23,8 @@
        data-event-dominant-color="<%= get_image_dominant_color event %>"
        data-target="event.event"
        id="<%= dom_id event %>">
-       <!-- <div class="me-card__primary-section"> -->
-         <!--      <span class="me-chip mdc-chip me-card__category"-->
-         <!--            data-target="event.category">-->
-         <%#= link_to event.categories_primary_name.try(:capitalize), category_events_path(event.categories_primary_name) %>
-         <!--      </span>-->
-         <!--        <span aria-hidden="true"> · </span>-->
-         <% if event.details_prices.present? %>
-           <!-- <span class="me-card__price <%#= 'is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>"> -->
-             <%#= "R$#{event.details_prices.min}" %>
-           <!-- </span> -->
-         <% end %>
-       <!-- </div> -->
-    <div data-fixed="true" class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request %>" <%= "data-src=#{get_feed_image_url(event)}" unless json_request %> style="<%= get_image_style_attr event, preload: json_request %>">
+    <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event, preload: false %>">
+      <%= image_tag get_feed_image_url(event), loading: :lazy %>
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
           <div data-target="event.like">
